--- a/index.html1.html
+++ b/index.html1.html
@@ -1,4 +1,4 @@
-
+<html>
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -126,5 +126,4 @@
   </footer>
   <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
-
 </html>
